--- a/src/components/Featured.css
+++ b/src/components/Featured.css
@@ -5,7 +5,9 @@
     clip-path: polygon(0 0, 100% 10%, 100% 100%, 0% 90%);
 }
 .featured .container{
+    display: -ms-grid;
     display: grid;
+    /* grid-template-columns: -ms-grid-columns; */
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     align-items: center;
